--- a/package.json
+++ b/package.json
@@ -23,10 +23,7 @@
   "homepage": "https://github.com/Krcano/Id-Authenticator#readme",
   "dependencies": {
     "concurrently": "^7.0.0",
-<<<<<<< HEAD
-    "face-api.js": "^0.22.2"
-=======
+    "face-api.js": "^0.22.2",
     "react-tsparticles": "^1.39.1"
->>>>>>> a77cb73c0d04756d81c54f1c94d1fe300150c215
   }
 }
