--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,12 @@
   "name": "id-authenticator",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
   "dependencies": {
     "@apollo/client": "^3.5.5",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "antd": "^4.18.5",
     "face-api.js": "^0.22.2",
     "graphql": "^15.4.0",
     "jwt-decode": "^3.1.2",
