--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "apollo-server-express": "^2.12.0",
     "bcrypt": "^5.0.1",
+    "cors": "^2.8.5",
     "express": "^4.17.2",
     "graphql": "^15.5.1",
     "jsonwebtoken": "^8.5.1",
